--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trpc/react-query": "10.45.0",
     "@trpc/server": "^10.45.0",
     "@turf/turf": "^7.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -54,6 +55,8 @@
     "antd": "^5.21.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
