feat: add new dependencies and improve layout formatting
- Added 'html2canvas' and 'jspdf' to package.json for enhanced functionality.
- Reformatted import statements in layout.tsx for consistency.
- Updated string formatting in page.tsx for better readability and consistency.
- Integrated BanglishEditor component into the writing page.

--- a/package.json
+++ b/package.json
@@ -95,8 +95,10 @@
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.9",
     "howler": "^2.2.4",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.2",
     "ioredis": "^5.4.1",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.291.0",
     "luxon": "^3.4.4",
