--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "exif-js": "^2.3.0",
     "exifr": "^7.1.3",
     "express": "^4.21.0",
-    "firebase": "^11.0.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.11.9",
     "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
@@ -145,6 +145,7 @@
     "@types/d3-time-format": "^4.0.3",
     "@types/editorjs__header": "^2.6.3",
     "@types/leaflet": "^1.9.12",
+    "@types/lodash": "^4.17.14",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
