--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
-  
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    
     "@hookform/resolvers": "^3.3.2",
     "@lancedb/lancedb": "^0.11.0",
     "@lottiefiles/dotlottie-react": "^0.9.0",
@@ -59,6 +57,7 @@
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
@@ -67,7 +66,6 @@
     "d3-format": "^3.1.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.1.7",
-   
     "endent": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
@@ -76,10 +74,10 @@
     "exifr": "^7.1.3",
     "express": "^4.21.0",
     "firebase": "^11.1.0",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.15.0",
     "howler": "^2.2.4",
     "html2canvas": "^1.4.1",
-    "http-proxy-middleware": "^3.0.2", 
+    "http-proxy-middleware": "^3.0.2",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.291.0",
@@ -96,6 +94,7 @@
     "openai": "^4.47.1",
     "postcss": "8.4.28",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.4.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
@@ -112,7 +111,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7", 
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.7.4",
     "uuid": "^9.0.1",
@@ -123,12 +122,12 @@
   },
   "devDependencies": {
     "@types/d3-format": "^3.0.4",
-    "@types/d3-time-format": "^4.0.3", 
+    "@types/d3-time-format": "^4.0.3",
     "@types/leaflet": "^1.9.12",
     "@types/lodash": "^4.17.14",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.11.0", 
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
     "prettier": "3.0.3",
     "prisma": "^5.6.0",
     "prisma-dbml-generator": "^0.12.0"
